--- a/package.json
+++ b/package.json
@@ -12,17 +12,19 @@
         "format": "prettier --write ."
     },
     "dependencies": {
-        "next": "15.0.4",
-        "react": "^19.0.0",
-        "react-dom": "^19.0.0"
+        "@reduxjs/toolkit": "^2.2.0",
+        "next": "latest",
+        "react": "^18.2.0",
+        "react-dom": "^18.2.0",
+        "react-redux": "^9.1.0"
     },
     "devDependencies": {
         "@types/node": "^20",
-        "@types/react": "^19",
-        "@types/react-dom": "^19",
+        "@types/react": "18.2.37",
+        "@types/react-dom": "^18.2.18",
         "@typescript-eslint/eslint-plugin": "^8.17.0",
         "eslint": "^8",
-        "eslint-config-next": "15.0.4",
+        "eslint-config-next": "^15.0.4",
         "eslint-config-prettier": "^9.1.0",
         "eslint-plugin-prettier": "^5.2.1",
         "eslint-plugin-unused-imports": "^4.1.4",
