--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     },
     "dependencies": {
         "@reduxjs/toolkit": "^2.2.0",
+        "bootstrap": "^5.3.3",
         "next": "latest",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
-        "react-redux": "^9.1.0"
+        "react-redux": "^9.1.0",
+        "react-router-dom": "^7.0.2"
     },
     "devDependencies": {
         "@types/node": "^20",
