--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "dependencies": {
         "@reduxjs/toolkit": "^2.2.0",
         "bootstrap": "^5.3.3",
+        "i18next": "^24.0.5",
         "next": "latest",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
+        "react-i18next": "^15.1.3",
         "react-redux": "^9.1.0",
         "react-router-dom": "^7.0.2"
     },
