--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-i18next": "^15.1.3",
+        "react-icons": "^5.4.0",
         "react-redux": "^9.1.0",
         "react-router-dom": "^7.0.2"
     },
