--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,8 @@
 NEXT_PUBLIC_BACKEND_URL=http://localhost:8080
+NEXTAUTH_SECRET=
+NEXTAUTH_URL=http://localhost:3000/
+KEYCLOAK_CLIENT_ID=frontend
+KEYCLOAK_CLIENT_SECRET=
+KEYCLOAK_REALM=
+KEYCLOAK_LOCAL_URL=http://localhost:8888/
+KEYCLOAK_PUBLIC_URL=http://localhost:8888/
