--- a/package.json
+++ b/package.json
@@ -15,7 +15,11 @@
         "@reduxjs/toolkit": "^2.2.0",
         "bootstrap": "^5.3.3",
         "i18next": "^24.0.5",
+        "axios": "^1.7.9",
+        "jwt-decode": "^3.1.2",
+        "moment": "^2.30.1",
         "next": "latest",
+        "next-auth": "^4.24.11",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-i18next": "^15.1.3",
