--- a/package.json
+++ b/package.json
@@ -13,10 +13,11 @@
     },
     "dependencies": {
         "@reduxjs/toolkit": "^2.2.0",
+        "axios": "^1.7.9",
         "bootstrap": "^5.3.3",
         "i18next": "^24.0.5",
-        "axios": "^1.7.9",
         "jwt-decode": "^3.1.2",
+        "lucide-react": "^0.468.0",
         "moment": "^2.30.1",
         "next": "latest",
         "next-auth": "^4.24.11",
@@ -25,7 +26,8 @@
         "react-i18next": "^15.1.3",
         "react-icons": "^5.4.0",
         "react-redux": "^9.1.0",
-        "react-router-dom": "^7.0.2"
+        "react-router-dom": "^7.0.2",
+        "recharts": "^2.14.1"
     },
     "devDependencies": {
         "@types/node": "^20",
