--- a/package.json
+++ b/package.json
@@ -25,9 +25,11 @@
         "react-dom": "^18.2.0",
         "react-i18next": "^15.1.3",
         "react-icons": "^5.4.0",
+        "react-qr-code": "^2.0.15",
         "react-redux": "^9.1.0",
         "react-router-dom": "^7.0.2",
-        "recharts": "^2.14.1"
+        "recharts": "^2.14.1",
+        "uuid": "^11.0.3"
     },
     "devDependencies": {
         "@types/node": "^20",
