--- a/package.json
+++ b/package.json
@@ -12,9 +12,12 @@
         "format": "prettier --write ."
     },
     "dependencies": {
+        "@heroicons/react": "^2.2.0",
         "@reduxjs/toolkit": "^2.2.0",
+        "@tanstack/react-table": "^8.20.5",
         "axios": "^1.7.9",
         "bootstrap": "^5.3.3",
+        "framer-motion": "^11.13.5",
         "i18next": "^24.0.5",
         "jwt-decode": "^3.1.2",
         "lucide-react": "^0.468.0",
@@ -22,14 +25,14 @@
         "next": "latest",
         "next-auth": "^4.24.11",
         "react": "^18.2.0",
+        "react-calendar": "^5.1.0",
         "react-dom": "^18.2.0",
         "react-i18next": "^15.1.3",
         "react-icons": "^5.4.0",
-        "react-qr-code": "^2.0.15",
         "react-redux": "^9.1.0",
         "react-router-dom": "^7.0.2",
-        "recharts": "^2.14.1",
-        "uuid": "^11.0.3"
+        "react-select": "^5.8.3",
+        "recharts": "^2.14.1"
     },
     "devDependencies": {
         "@types/node": "^20",
