--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
         "format": "prettier --write ."
     },
     "dependencies": {
+        "@emotion/react": "^11.14.0",
+        "@emotion/styled": "^11.14.0",
         "@heroicons/react": "^2.2.0",
+        "@mui/material": "^5.16.11",
         "@reduxjs/toolkit": "^2.2.0",
         "@tanstack/react-table": "^8.20.5",
         "axios": "^1.7.9",
