--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "dependencies": {
         "@emotion/react": "^11.14.0",
         "@emotion/styled": "^11.14.0",
-        "@heroicons/react": "^2.2.0",
+        "@heroicons/react": "^1.0.6",
         "@mui/material": "^5.16.11",
         "@reduxjs/toolkit": "^2.2.0",
         "@tanstack/react-table": "^8.20.5",
@@ -27,11 +27,14 @@
         "moment": "^2.30.1",
         "next": "latest",
         "next-auth": "^4.24.11",
+        "qrcode.react": "^4.1.0",
         "react": "^18.2.0",
+        "react-barcode": "^1.5.3",
         "react-calendar": "^5.1.0",
         "react-dom": "^18.2.0",
         "react-i18next": "^15.1.3",
         "react-icons": "^5.4.0",
+        "react-qr-code": "^2.0.15",
         "react-redux": "^9.1.0",
         "react-router-dom": "^7.0.2",
         "react-select": "^5.8.3",
