--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "framer-motion": "^11.13.5",
         "i18next": "^24.0.5",
         "jwt-decode": "^3.1.2",
+        "lottie-react": "^2.4.0",
         "lucide-react": "^0.468.0",
         "moment": "^2.30.1",
         "next": "latest",
@@ -38,6 +39,7 @@
         "react-redux": "^9.1.0",
         "react-router-dom": "^7.0.2",
         "react-select": "^5.8.3",
+        "react-spring": "^9.7.5",
         "recharts": "^2.14.1"
     },
     "devDependencies": {
